Fix modal size on mobile

--- a/2019-and-on/main.css
+++ b/2019-and-on/main.css
@@ -108,7 +108,7 @@ a, .teal {
 }
 
 .modal .tingle-modal-box {
-  width: 500px;
+  max-width: 500px;
 }
 
 .modal img {
